--- a/styles.css
+++ b/styles.css
@@ -94,21 +94,20 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  gap: 5rem;
-  padding: 6rem;
+  gap: 3rem;
+  padding: 6rem 2rem;
   background-color: var(--Miffy-Blue);
 }
 
 img.round {
-  width: 30rem;
-  height: 30rem;
+  width: 25rem;
+  height: 25rem;
   border-radius: 100%;
   object-fit: cover;
 }
 #hero-section .text-box {
   display: flex;
   flex-direction: column;
-  font-size: var(--Header);
   max-width: 500px;
 }
 
@@ -693,7 +692,7 @@ h1 {
 }
   
   #shop .text-box {
-    height: 160px;
+    height: 200px;
   }
   
   #shop h2 {
