--- a/styles.css
+++ b/styles.css
@@ -92,11 +92,19 @@ body {
 
 #hero-section {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   gap: 3rem;
-  padding: 6rem 2rem;
+  padding: 6rem;
   background-color: var(--Miffy-Blue);
+}
+#lock-feature {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: left;
+  padding: 6rem;
+  background-color: var(--Miffy-Yellow);
 }
 
 img.round {
@@ -120,11 +128,11 @@ h1 {
   font-size: var(--Header);
 }
 .microwave-container {
-  max-width: 600px;
+  width: 40rem;
 }
 
 #microwave-img {
-  width: 30rem;
+  width: 100%;
   margin-bottom: 20px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
